Fix message bar whitespace slit

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -709,7 +709,7 @@ nav {
 .message-fixed {
   position: fixed;
   z-index: 10;
-  top: 51px;
+  top: 50px;
   left: 0;
   right: 0;
 }
